--- a/TGE/TGE.vcxproj.filters
+++ b/TGE/TGE.vcxproj.filters
@@ -126,6 +126,18 @@
     <ClInclude Include="assets\PhysFS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="assets\tgTextAsset.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tween\tgTweens.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tween\tgTween.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tween\tgTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\tgImageData.cpp">
@@ -201,6 +213,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="assets\PhysFS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="assets\tgTextAsset.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tween\tgTweens.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tween\tgTween.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tween\tgTimer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
