--- a/TGE/TGE.vcxproj
+++ b/TGE/TGE.vcxproj
@@ -75,12 +75,12 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)deps\luajit\include;$(SolutionDir)deps\physfs\include;$(SolutionDir)deps\SDL2-2.0.5\include;$(SolutionDir)deps\glew-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_NO_DEBUG_HEAP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)deps\luajit\lib;$(SolutionDir)deps\physfs\lib;$(SolutionDir)deps\SDL2-2.0.5\lib;$(SolutionDir)deps\glew-2.0.0\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>openal32.lib;opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -106,8 +106,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)deps\luajit\lib;$(SolutionDir)deps\physfs\lib;$(SolutionDir)deps\SDL2-2.0.5\lib;$(SolutionDir)deps\glew-2.0.0\lib;%(AdditionalLibraryDirectories);$(VcpkgRoot)lib;$(VcpkgRoot)lib\manual-link</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>openal32.lib;opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -124,9 +124,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="assets\tgAudioAsset.h" />
     <ClInclude Include="assets\tgFontAsset.h" />
     <ClInclude Include="assets\tgTextAsset.h" />
     <ClInclude Include="assets\tgTextureAsset.h" />
+    <ClInclude Include="audio\tgAudioBuffer.h" />
+    <ClInclude Include="audio\tgAudioSource.h" />
+    <ClInclude Include="audio\tgSampleData.h" />
+    <ClInclude Include="core\stb_vorbis.h" />
+    <ClInclude Include="audio\tgAudioSystem.h" />
+    <ClInclude Include="components\tgEmitterComponent.h" />
     <ClInclude Include="components\tgSpriteComponent.h" />
     <ClInclude Include="components\tgFontComponent.h" />
     <ClInclude Include="components\tgTransformComponent.h" />
@@ -164,17 +171,23 @@
     <ClInclude Include="scenegraph\tgSceneTree.h" />
     <ClInclude Include="scripting\sol.hpp" />
     <ClInclude Include="scripting\tgScript.h" />
-    <ClInclude Include="tgTime.h" />
+    <ClInclude Include="core\tgTime.h" />
     <ClInclude Include="tween\tgTimer.h" />
     <ClInclude Include="tween\tgTween.h" />
     <ClInclude Include="tween\tgTweens.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="assets\tgAudioAsset.cpp" />
     <ClCompile Include="assets\tgFontAsset.cpp" />
     <ClCompile Include="assets\tgTextAsset.cpp" />
     <ClCompile Include="assets\tgTextureAsset.cpp" />
     <ClCompile Include="assets\PhysFS.cpp" />
     <ClCompile Include="assets\tgAssets.cpp" />
+    <ClCompile Include="audio\tgAudioBuffer.cpp" />
+    <ClCompile Include="audio\tgAudioSource.cpp" />
+    <ClCompile Include="audio\tgAudioSystem.cpp" />
+    <ClCompile Include="audio\tgSampleData.cpp" />
+    <ClCompile Include="components\tgEmitterComponent.cpp" />
     <ClCompile Include="components\tgFontComponent.cpp" />
     <ClCompile Include="components\tgSpriteComponent.cpp" />
     <ClCompile Include="core\tgFont.cpp" />
@@ -201,7 +214,7 @@
     <ClCompile Include="scenegraph\tgNode.cpp" />
     <ClCompile Include="scenegraph\tgSceneTree.cpp" />
     <ClCompile Include="scripting\tgScript.cpp" />
-    <ClCompile Include="tgTime.cpp" />
+    <ClCompile Include="core\tgTime.cpp" />
     <ClCompile Include="tween\tgTimer.cpp" />
     <ClCompile Include="tween\tgTween.cpp" />
     <ClCompile Include="tween\tgTweens.cpp" />
