--- a/TGE/TGE.vcxproj.filters
+++ b/TGE/TGE.vcxproj.filters
@@ -72,19 +72,7 @@
     <ClInclude Include="math\tgQuaternion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="scenegraph\tgNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="scenegraph\tgSceneTree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="graphics\tgRenderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="nodes\tgSpriteNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="nodes\tgAnimatedSpriteNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ecs\tgComponent.h">
@@ -174,7 +162,16 @@
     <ClInclude Include="core\picojson.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="core\tgGame.h">
+    <ClInclude Include="core\tgGameState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="components\tgAudioSourceComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="graphics\tgFrameBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="graphics\tgPostEffect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -221,19 +218,7 @@
     <ClCompile Include="math\tgQuaternion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="scenegraph\tgNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="scenegraph\tgSceneTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="graphics\tgRenderer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="nodes\tgSpriteNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="nodes\tgAnimatedSpriteNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="assets\tgTextureAsset.cpp">
@@ -303,6 +288,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="core\tgEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="core\tgGameState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="components\tgAudioSourceComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="graphics\tgFrameBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="graphics\tgPostEffect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
